--- a/03_Dataframe,Series.ipynb
+++ b/03_Dataframe,Series.ipynb
@@ -12,12 +12,12 @@
    "metadata": {},
    "source": [
     "# 시리즈 만들기\n",
-    "실습에 사용할 시리즈와 데이터프레임을 직접 만들어서 진핸"
+    "실습에 사용할 시리즈와 데이터프레임을 직접 만들어서 진행"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 110,
    "metadata": {
     "scrolled": true
    },
@@ -258,7 +258,7 @@
        "Index(['popular', 'Price'], dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "array(['good', 2000], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 112,
    "metadata": {
     "scrolled": true
    },
@@ -302,7 +302,7 @@
        "Index(['popular', 'Price'], dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "'popular'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "'Price'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "Name: Price, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "4         Rachel Carson  1907-05-27  1964-04-14   56     Biologist"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,25 +553,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "90 59.125\n"
+      "최댓값 :  90\n",
+      "평균 :  59.125\n"
      ]
     }
    ],
    "source": [
     "ages = scientists['Age']\n",
-    "print(ages.max(), ages.mean())"
+    "print('최댓값 : ', ages.max())\n",
+    "print('평균 : ', ages.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +586,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +623,7 @@
        "Name: Age, dtype: bool"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +654,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 126,
    "metadata": {
     "scrolled": true
    },
@@ -818,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +837,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +969,7 @@
        "7          Johann Gauss  1777-04-30  1855-02-23   77  Mathematician"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +991,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-bbdb118393a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscientists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-130-8de6b078c3b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 예전 버전은 bool벡터를 짧게 입력해도 되었지만 버전이 업데이트 되면서 전체 행의 개수만큼 bool 벡터의 길이가 일치해야함.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mscientists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    877\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    878\u001b[0m             \u001b[0mmaybe_callable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 879\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaybe_callable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    880\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    881\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_is_scalar_access\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1088\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_slice_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1089\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_bool_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1090\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getbool_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1091\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mis_list_like_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1092\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_getbool_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m    894\u001b[0m         \u001b[0;31m# caller is responsible for ensuring non-None axis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    895\u001b[0m         \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 896\u001b[0;31m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_bool_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    897\u001b[0m         \u001b[0minds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    898\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_take_with_is_copy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -1013,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1137,7 @@
        "7  1855-02-231855-02-23  154            MathematicianMathematician  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1412,7 @@
        "7 1777-04-30 1855-02-23  28422 days  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1449,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1488,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1522,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1664,7 @@
        "7 1855-02-23  28422 days  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,13 +1680,13 @@
    "metadata": {},
    "source": [
     "# 피클 형식으로 저장하기\n",
-    " 피클은 데이터를 바이너리 형태로 직렬화한 오브젝트를 정장하는 방법  \n",
+    " 피클은 데이터를 바이너리 형태로 직렬화한 오브젝트를 저장하는 방법  \n",
     " 스프레드시트보다 더 적은 용량으로 데이터를 저장할 수 있어 매우 편리함  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,26 +1807,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pandas.read_excel()은 내부에서 xlrd이라는 라이브러리를 사용합니다.\n",
+    "pandas.read_excel()은 내부에서 xlrd이라는 라이브러리를 사용\n",
     "\n",
-    "xlrd은 파이썬에서 엑셀 파일을 읽어오거나 쓰기를 할 때 필요한 라이브러리입니다.\n",
+    "xlrd은 파이썬에서 엑셀 파일을 읽어오거나 쓰기를 할 때 필요한 라이브러리\n",
     "\n",
-    "xlrd가 설치되지 않았다면 엑셀파일을 읽어올 때 에러가 발생합니다."
+    "xlrd가 설치되지 않았다면 엑셀파일을 읽어올 때 에러가 발생"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_df = names.to_frame()\n",
     "\n",
     "import xlwt\n",
-    "# names_df.to_excel('output/scientists_names_series_df.xls')\n",
+    "names_df.to_excel('output/scientists_names_series_df.xls')\n",
     "\n",
     "import openpyxl\n",
-    "# names_df.to_excel('output/scientists_names_series_df.xlsx')"
+    "names_df.to_excel('output/scientists_names_series_df.xlsx')"
    ]
   }
  ],
@@ -1859,7 +1861,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "358.391px"
+    "width": "384px"
    },
    "toc_section_display": true,
    "toc_window_display": true
