--- a/06_NaN.ipynb
+++ b/06_NaN.ipynb
@@ -90,16 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n"
+     "ename": "NameError",
+     "evalue": "name 'NaN' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-b89b387f0d22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNaN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNAN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'NaN' is not defined"
      ]
     }
    ],
@@ -119,16 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "True\n",
-      "True\n"
+     "ename": "NameError",
+     "evalue": "name 'NaN' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-fa757a79b846>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNaN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'missing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'NaN' is not defined"
      ]
     }
    ],
@@ -190,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -236,287 +240,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ident</th>\n",
-       "      <th>site</th>\n",
-       "      <th>dated</th>\n",
-       "      <th>taken</th>\n",
-       "      <th>person</th>\n",
-       "      <th>quant</th>\n",
-       "      <th>reading</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>619</td>\n",
-       "      <td>DR-1</td>\n",
-       "      <td>1927-02-08</td>\n",
-       "      <td>619</td>\n",
-       "      <td>dyer</td>\n",
-       "      <td>rad</td>\n",
-       "      <td>9.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>619</td>\n",
-       "      <td>DR-1</td>\n",
-       "      <td>1927-02-08</td>\n",
-       "      <td>619</td>\n",
-       "      <td>dyer</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>0.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>622</td>\n",
-       "      <td>DR-1</td>\n",
-       "      <td>1927-02-10</td>\n",
-       "      <td>622</td>\n",
-       "      <td>dyer</td>\n",
-       "      <td>rad</td>\n",
-       "      <td>7.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>622</td>\n",
-       "      <td>DR-1</td>\n",
-       "      <td>1927-02-10</td>\n",
-       "      <td>622</td>\n",
-       "      <td>dyer</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>0.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>734</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1939-01-07</td>\n",
-       "      <td>734</td>\n",
-       "      <td>pb</td>\n",
-       "      <td>rad</td>\n",
-       "      <td>8.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>734</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1939-01-07</td>\n",
-       "      <td>734</td>\n",
-       "      <td>lake</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>0.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>734</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1939-01-07</td>\n",
-       "      <td>734</td>\n",
-       "      <td>pb</td>\n",
-       "      <td>temp</td>\n",
-       "      <td>-21.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>735</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1930-01-12</td>\n",
-       "      <td>735</td>\n",
-       "      <td>pb</td>\n",
-       "      <td>rad</td>\n",
-       "      <td>7.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>735</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1930-01-12</td>\n",
-       "      <td>735</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>0.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>735</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1930-01-12</td>\n",
-       "      <td>735</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>temp</td>\n",
-       "      <td>-26.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>751</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1930-02-26</td>\n",
-       "      <td>751</td>\n",
-       "      <td>pb</td>\n",
-       "      <td>rad</td>\n",
-       "      <td>4.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>751</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1930-02-26</td>\n",
-       "      <td>751</td>\n",
-       "      <td>pb</td>\n",
-       "      <td>temp</td>\n",
-       "      <td>-18.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>751</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>1930-02-26</td>\n",
-       "      <td>751</td>\n",
-       "      <td>lake</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>0.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>752</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>752</td>\n",
-       "      <td>lake</td>\n",
-       "      <td>rad</td>\n",
-       "      <td>2.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>752</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>752</td>\n",
-       "      <td>lake</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>0.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>752</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>752</td>\n",
-       "      <td>lake</td>\n",
-       "      <td>temp</td>\n",
-       "      <td>-16.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>752</td>\n",
-       "      <td>DR-3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>752</td>\n",
-       "      <td>roe</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>41.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>837</td>\n",
-       "      <td>MSK-4</td>\n",
-       "      <td>1932-01-14</td>\n",
-       "      <td>837</td>\n",
-       "      <td>lake</td>\n",
-       "      <td>rad</td>\n",
-       "      <td>1.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>837</td>\n",
-       "      <td>MSK-4</td>\n",
-       "      <td>1932-01-14</td>\n",
-       "      <td>837</td>\n",
-       "      <td>lake</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>0.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>837</td>\n",
-       "      <td>MSK-4</td>\n",
-       "      <td>1932-01-14</td>\n",
-       "      <td>837</td>\n",
-       "      <td>roe</td>\n",
-       "      <td>sal</td>\n",
-       "      <td>22.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>844</td>\n",
-       "      <td>DR-1</td>\n",
-       "      <td>1932-03-22</td>\n",
-       "      <td>844</td>\n",
-       "      <td>roe</td>\n",
-       "      <td>rad</td>\n",
-       "      <td>11.25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ident   site       dated  taken person quant  reading\n",
-       "0     619   DR-1  1927-02-08    619   dyer   rad     9.82\n",
-       "1     619   DR-1  1927-02-08    619   dyer   sal     0.13\n",
-       "2     622   DR-1  1927-02-10    622   dyer   rad     7.80\n",
-       "3     622   DR-1  1927-02-10    622   dyer   sal     0.09\n",
-       "4     734   DR-3  1939-01-07    734     pb   rad     8.41\n",
-       "5     734   DR-3  1939-01-07    734   lake   sal     0.05\n",
-       "6     734   DR-3  1939-01-07    734     pb  temp   -21.50\n",
-       "7     735   DR-3  1930-01-12    735     pb   rad     7.22\n",
-       "8     735   DR-3  1930-01-12    735    NaN   sal     0.06\n",
-       "9     735   DR-3  1930-01-12    735    NaN  temp   -26.00\n",
-       "10    751   DR-3  1930-02-26    751     pb   rad     4.35\n",
-       "11    751   DR-3  1930-02-26    751     pb  temp   -18.50\n",
-       "12    751   DR-3  1930-02-26    751   lake   sal     0.10\n",
-       "13    752   DR-3         NaN    752   lake   rad     2.19\n",
-       "14    752   DR-3         NaN    752   lake   sal     0.09\n",
-       "15    752   DR-3         NaN    752   lake  temp   -16.00\n",
-       "16    752   DR-3         NaN    752    roe   sal    41.60\n",
-       "17    837  MSK-4  1932-01-14    837   lake   rad     1.46\n",
-       "18    837  MSK-4  1932-01-14    837   lake   sal     0.21\n",
-       "19    837  MSK-4  1932-01-14    837    roe   sal    22.50\n",
-       "20    844   DR-1  1932-03-22    844    roe   rad    11.25"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    ident   site       dated  taken person quant  reading\n",
+      "0     619   DR-1  1927-02-08    619   dyer   rad     9.82\n",
+      "1     619   DR-1  1927-02-08    619   dyer   sal     0.13\n",
+      "2     622   DR-1  1927-02-10    622   dyer   rad     7.80\n",
+      "3     622   DR-1  1927-02-10    622   dyer   sal     0.09\n",
+      "4     734   DR-3  1939-01-07    734     pb   rad     8.41\n",
+      "5     734   DR-3  1939-01-07    734   lake   sal     0.05\n",
+      "6     734   DR-3  1939-01-07    734     pb  temp   -21.50\n",
+      "7     735   DR-3  1930-01-12    735     pb   rad     7.22\n",
+      "8     735   DR-3  1930-01-12    735    NaN   sal     0.06\n",
+      "9     735   DR-3  1930-01-12    735    NaN  temp   -26.00\n",
+      "10    751   DR-3  1930-02-26    751     pb   rad     4.35\n",
+      "11    751   DR-3  1930-02-26    751     pb  temp   -18.50\n",
+      "12    751   DR-3  1930-02-26    751   lake   sal     0.10\n",
+      "13    752   DR-3         NaN    752   lake   rad     2.19\n",
+      "14    752   DR-3         NaN    752   lake   sal     0.09\n",
+      "15    752   DR-3         NaN    752   lake  temp   -16.00\n",
+      "16    752   DR-3         NaN    752    roe   sal    41.60\n",
+      "17    837  MSK-4  1932-01-14    837   lake   rad     1.46\n",
+      "18    837  MSK-4  1932-01-14    837   lake   sal     0.21\n",
+      "19    837  MSK-4  1932-01-14    837    roe   sal    22.50\n",
+      "20    844   DR-1  1932-03-22    844    roe   rad    11.25\n"
+     ]
     }
    ],
    "source": [
     "vs = visited.merge(survey, left_on='ident', right_on='taken')\n",
-    "vs"
+    "print(vs)"
    ]
   },
   {
