--- a/Keras_TimeSeries/notebook/2장_딥러닝시작.ipynb
+++ b/Keras_TimeSeries/notebook/2장_딥러닝시작.ipynb
@@ -311,13 +311,7 @@
       "10/10 [==============================] - 0s 636us/step - loss: 0.0516 - accuracy: 0.0678\n",
       "Epoch 75/800\n",
       "10/10 [==============================] - 0s 647us/step - loss: 0.0655 - accuracy: 0.0526\n",
-      "Epoch 76/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 76/800\n",
       "10/10 [==============================] - 0s 693us/step - loss: 0.0397 - accuracy: 0.0396\n",
       "Epoch 77/800\n",
       "10/10 [==============================] - 0s 647us/step - loss: 0.0473 - accuracy: 0.2754\n",
@@ -639,13 +633,7 @@
       "10/10 [==============================] - 0s 639us/step - loss: 0.0106 - accuracy: 0.1845  \n",
       "Epoch 233/800\n",
       "10/10 [==============================] - 0s 637us/step - loss: 0.0067 - accuracy: 0.0283  \n",
-      "Epoch 234/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 234/800\n",
       "10/10 [==============================] - 0s 611us/step - loss: 0.0063 - accuracy: 0.0182  \n",
       "Epoch 235/800\n",
       "10/10 [==============================] - 0s 633us/step - loss: 0.0081 - accuracy: 0.0396\n",
@@ -965,13 +953,7 @@
       "10/10 [==============================] - 0s 649us/step - loss: 9.6017e-04 - accuracy: 0.0860\n",
       "Epoch 390/800\n",
       "10/10 [==============================] - 0s 620us/step - loss: 5.6585e-04 - accuracy: 0.0283\n",
-      "Epoch 391/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 391/800\n",
       "10/10 [==============================] - 0s 632us/step - loss: 8.3500e-04 - accuracy: 0.1087\n",
       "Epoch 392/800\n",
       "10/10 [==============================] - 0s 667us/step - loss: 0.0011 - accuracy: 0.0678\n",
@@ -1281,13 +1263,7 @@
       "10/10 [==============================] - 0s 644us/step - loss: 7.0861e-06 - accuracy: 0.0526\n",
       "Epoch 542/800\n",
       "10/10 [==============================] - 0s 686us/step - loss: 6.1187e-06 - accuracy: 0.0182\n",
-      "Epoch 543/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 543/800\n",
       "10/10 [==============================] - 0s 647us/step - loss: 6.0701e-06 - accuracy: 0.0860\n",
       "Epoch 544/800\n",
       "10/10 [==============================] - 0s 640us/step - loss: 9.1380e-06 - accuracy: 0.2754\n",
@@ -1597,13 +1573,7 @@
       "10/10 [==============================] - 0s 598us/step - loss: 1.2295e-10 - accuracy: 0.0860\n",
       "Epoch 694/800\n",
       "10/10 [==============================] - 0s 632us/step - loss: 1.2615e-10 - accuracy: 0.0396\n",
-      "Epoch 695/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 695/800\n",
       "10/10 [==============================] - 0s 584us/step - loss: 1.9678e-10 - accuracy: 0.2754\n",
       "Epoch 696/800\n",
       "10/10 [==============================] - 0s 689us/step - loss: 1.5043e-10 - accuracy: 0.2754\n",
@@ -2253,13 +2223,7 @@
       "10/10 [==============================] - 0s 4ms/step - loss: 0.0031 - val_loss: 2.4482\n",
       "Epoch 81/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 0.0024 - val_loss: 2.2764\n",
-      "Epoch 82/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 82/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 0.0025 - val_loss: 2.3158\n",
       "Epoch 83/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 0.0019 - val_loss: 2.0756\n",
@@ -2731,13 +2695,7 @@
       "10/10 [==============================] - 0s 5ms/step - loss: 8.5275e-13 - val_loss: 1.3621e-09\n",
       "Epoch 311/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 1.0437e-12 - val_loss: 1.2573e-09\n",
-      "Epoch 312/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 312/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 5.7963e-13 - val_loss: 1.2573e-09\n",
       "Epoch 313/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 7.1317e-13 - val_loss: 1.2573e-09\n",
@@ -3043,13 +3001,7 @@
       "10/10 [==============================] - 0s 4ms/step - loss: 1.0380e-13 - val_loss: 2.3283e-11\n",
       "Epoch 461/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 5.9284e-14 - val_loss: 2.3283e-11\n",
-      "Epoch 462/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 462/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 1.3056e-13 - val_loss: 2.3283e-11\n",
       "Epoch 463/500\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 1.0127e-13 - val_loss: 2.3283e-11\n",
