--- a/Pytorch/Tensor_Manipulation.ipynb
+++ b/Pytorch/Tensor_Manipulation.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -528,12 +528,13 @@
     "print('---------------')\n",
     "m1 = torch.FloatTensor([[1, 2], [3, 4]])\n",
     "m2 = torch.FloatTensor([[1], [2]])\n",
-    "print(m1.matmul(m2))\n",
+    "\n",
     "print('shape of m1 :', m1.size())\n",
     "print('shape of m2 :', m2.size())\n",
     "print('\\n Result of Mul')\n",
     "print(m1.mul(m2))\n",
-    "print('\\n Result of Matmul')\n"
+    "print('\\n Result of Matmul')\n",
+    "print(m1.matmul(m2))\n"
    ]
   },
   {
